Replace in-memory database with postgreSQL database